# tkl-snap

./: .gitignore  Cargo.toml  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/record/: page.tsx
